# cuda_monte_four

./: .gitignore  CMakeLists.txt  README.md  app.py  benchmark.py  benchmark_results.json  project_plan.md  scratch_logic.py  scratch_mask.py  start_services.bat
docs/: exhaustive_format.md  solver_format.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Board.tsx  SettingsPanel.tsx  StatusBar.tsx
frontend/src/utils/: gameLogic.ts
include/connect4/: board.hpp
include/gomoku/: bitboard.hpp  board.hpp
src/: exhaustive.cpp  gomoku_monte_carlo_cuda.cu  gomoku_solver_cpu.cpp  monte_carlo_cpu.cpp  monte_carlo_cuda.cu  perfect_db_cpu.cpp  perfect_frontier_cuda.cu  perfect_solver_cpu.cpp  play_monte_carlo_cuda.cu  solver_cpu.cpp
tests/: gomoku_board_tests.cpp
web/: index.html
web/assets/: index-B7zsI3b2.js  index-D9QHJtgh.css  index-DIxIv2zq.js  index-T8oYGDm5.css  index-WETLrVX2.css  index-lKnxEkOe.js  index-xO6J3fRo.css
